kubernetes/prod/apps/network/frigate-proxy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}
spec:
  externalName: nvr.monosense.io
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
  type: ExternalName
