kubernetes/prod/apps/network/frigate-proxy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress-int.monosense.io
spec:
  ingressClassName: internal-nginx
  rules:
    - host: &host ${HOSTNAME}
      http:
        paths:
          - backend:
              service:
                name: ${APP}
                port:
                  name: http
            path: /
            pathType: Prefix
  tls: [hosts: [*host]]
